# allcov

./: .gitignore  main.py  pyproject.toml
thecov/: base.py  covariance.py  geometry.py  math.py  utils.py
thecov/tests/: test_run.py
